deployment-prometheus/prom-graf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.orch-team-c.pns-projects.fr.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pr-prom-prometheus
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.orch-team-c.pns-projects.fr.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pr-prom-grafana
            port:
              number: 80
